# tensor_vs_cuda

./: .gitignore  README.md
inference/: CMakeLists.txt
inference/cuda/: inference_fp16.cu  inference_fp32.cu
inference/cuda_cores/: inference.cu
inference/tensor/: inference_fp16.cu  inference_fp32.cu
inference/tensor_cores/: CMakeLists.txt  inference.cu
inference/unified/: CMakeLists.txt  CMakeLists.txt-sleepy  inference_cuda.cu  inference_tensor.cu
scripts/: README.md  analysis.py  run_batch_experiment.sh  run_inference.sh  run_sleepy.sh  run_sneezy.sh
training/: FP16_training.ipynb  FP32_training.ipynb  convert_validation.py  convert_weights.py  simple_cnn.pth  test.ipynb  train_cnn_model.ipynb
